# SGMC-tauri

./: .env.example  .gitignore  AGENTS.md  README.md  codebook.toml  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  config.rs  database.rs  filesystem.rs  lib.rs  logging.rs  main.rs  oauth.rs  server.rs
src/components/: app-sidebar.tsx  back-button.tsx  error-message.tsx  image-editor-modal.tsx  language-toggle.tsx  layout.tsx  restrictive-delete-dialog.tsx  scanner-modal.tsx  status-badge.tsx  sync-overlay.tsx  table-loading.tsx
src/components/ui/: badge.tsx  data-table-components.tsx  data-table.tsx  dialog.tsx  sheet.tsx  sidebar.tsx  switch.tsx  table.tsx
src/hooks/: use-auto-sync.ts
src/lib/: database.ts  db.ts  google-drive.ts  routes.ts  seed.ts  sync-store.ts  types.ts  utils.ts
src/lib/config/: app.ts  env.ts
src/lib/hooks/: use-auto-sync.ts  use-global-online-status.ts
src/lib/i18n/: i18next.d.ts  index.ts
src/lib/tanstack-query/: attachments.tsx  clinics.tsx  doctors.tsx  drive.tsx  patients.tsx  payments.tsx  sessions.tsx  statements.tsx
src/lib/types/: attachments.ts  clinics.ts  doctors.ts  patients.ts  payments.ts  sessions.ts  statements.ts
src/pages/: home-page.tsx  settings-page.tsx
src/pages/clinics/: clinics-page.tsx  new-clinic-page.tsx
src/pages/doctors/: doctors-page.tsx  new-doctor-page.tsx
(+25 files in other folders)
