[package]
name = "hospital-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hospital_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = ["uuid"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
log = "0.4.29"
tauri-plugin-log = "2"
tauri-plugin-notification = { version = "2.0.0", features = [ "windows7-compat" ] }
dirs = "6.0.0"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
